force-app/main/default/objects/Retailer_Target__c/Retailer_Target__c.object-meta.xml
<CustomObject>
    <label>Retailer Target</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Retailer Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>