force-app/main/default/objects/Retailer_Target__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>