force-app/main/default/objects/Retailer_Target__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month &amp; Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>