force-app/main/default/objects/Retailer_Target__c/fields/MonthYear__c.field-meta.xml
<CustomField>
    <fullName>MonthYear__c</fullName>
    <formula>CASE(MONTH(TODAY()), 
    1, &quot;Jan&quot;, 
    2, &quot;Feb&quot;, 
    3, &quot;Mar&quot;, 
    4, &quot;Apr&quot;, 
    5, &quot;May&quot;, 
    6, &quot;Jun&quot;, 
    7, &quot;Jul&quot;, 
    8, &quot;Aug&quot;, 
    9, &quot;Sep&quot;, 
    10, &quot;Oct&quot;, 
    11, &quot;Nov&quot;, 
    12, &quot;Dec&quot;, 
    &quot;&quot;) + &quot; &quot; + TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Year</label>
    <type>Text</type>
</CustomField>