force-app/main/default/objects/Retailer_Target__c/validationRules/Only_allows_Decimal.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_allows_Decimal</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Amount__c, &quot;^-?\\d+(\\.\\d+)?$&quot;))</errorConditionFormula>
    <errorMessage>Please add correct Decimal as a amount value</errorMessage>
</ValidationRule>