force-app/main/default/objects/Retailer_Target__c/listViews/My_Retailer_Target.listView-meta.xml
<ListView>
    <fullName>My_Retailer_Target</fullName>
    <columns>NAME</columns>
    <columns>Retailer__c</columns>
    <columns>MonthYear__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Retailer Target</label>
</ListView>